# speedtest-app

./: .gitignore  LICENSE  README.md  pyproject.toml
src/speedtest-app/: app.py  run_speedtest.py  speed.py
