[project]
name = "speedtest-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Herrmann"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "speedtest-cli (>=2.1.3,<3.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "dash (>=2.18.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "speedtest-app", from="src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


